fix for slider hidden images spilling into surrounding divs and add hover / bg colour for next / previous links in slider

--- a/client/sass/app/common/slider.scss
+++ b/client/sass/app/common/slider.scss
@@ -22,13 +22,13 @@ $slider-btn-height: 35px;
     top: 0em;
     display: none;
     pointer-events: all;
-    z-index: 2;
+    z-index: 3;
   }
 
   .sequence-next,
   .sequence-prev {
     height: 100%;
-    width: 15%;
+    width: 25%;
     position: absolute;
 
     img {
@@ -51,6 +51,14 @@ $slider-btn-height: 35px;
 
         opacity: 1;
       }
+    }
+  }
+
+  .sequence-prev,
+  .sequence-next {
+    &:hover {
+      cursor: pointer;
+      background-color: rgba($body-bg-color, 0.25);
     }
   }
 
@@ -82,6 +90,8 @@ $slider-btn-height: 35px;
     top: 0px;
     width: 100%;
     height: 100%;
+    z-index: 2;
+    pointer-events: none;
 
     .photo {
       position: absolute;
@@ -113,14 +123,20 @@ $slider-btn-height: 35px;
       }
     }
 
-    &.animate-in .photo {
-      left: 0;
-      @include single-transition(left, 0.4s, cubic-bezier(0.645, 0.045, 0.355, 1));
+    &.animate-in,
+    &.animate-out {
+      pointer-events: all;
+
+      .photo {
+        @include single-transition(left, 0.4s, cubic-bezier(0.645, 0.045, 0.355, 1));
+
+        overflow: hidden;
+        left: 0;
+      }
     }
 
     &.animate-out .photo {
       left: -100%;
-      @include single-transition(left, 0.4s, cubic-bezier(0.645, 0.045, 0.355, 1));
     }
   }
 }
